<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 Atte Heino
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->
<resources>

    <string name="app_name">Media Shuffle</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_lan">Search LAN</string>
    <string name="switch_router">Network On/Off</string>
    <string name="toggle_debug_logging" translatable="false">Toggle debug logging</string>
    <string name="searching_lan">Searching LAN for UPnP devices...</string>
    <string name="enabling_router" translatable="false">Enabling network router...</string>
    <string name="disabling_router" translatable="false">Disabling network router...</string>
    <string name="enabling_debug_logging" translatable="false">Enabling debug logging...</string>
    <string name="disabling_debug_logging" translatable="false">Disabling debug logging...</string>
    <string name="registering_demo_device" translatable="false">Registering UPnP demo device...</string>
    <string name="create_demo_failed" translatable="false">Creating of demo device failed, check the log!</string>
    <string name="title_setting_list">Settings</string>
    <string name="title_setting_detail">Setting Detail</string>
    <string name="size_of_collection_activity_main">Select max size (GB) to transfer:</string>
    <string name="source_path_activity_main">Select source folder</string>
    <string name="target_path_activity_main">Select target folder</string>
    <string name="start_transfer_activity_main">Start transfer</string>
    <string name="source_activity_main">Select DLNA Server</string>
    <string name="set_as_root">Set as root</string>
    <string name="title_shuffling_header">Shuffling the files. Please wait.</string>
    <string name="cancel_button">Cancel</string>
    <string name="shuffle_status_preparing">Creating list of files ...</string>
    <string name="shuffle_status_moving_files">Transferring files ...</string>
    <string name="shuffle_status_removing_files">Deleting existing files ...</string>
    <string name="shuffle_confirm_delete">Delete existing collection? (You had ticked it active in settings)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="header_activity_result">Shuffled media (Click to play)</string>
    <string name="folder_select_help_text">Enter folder by clicking - Select with long press</string>

    <!-- Main Activity -->
    <string name="selected_source_label">[Media Server not set ...]</string>
    <string name="selected_source_path_label">[Source path not set ...]</string>
    <string name="selected_target_path_label">[Target path not set ...]</string>

    <!-- About Activity -->
    <string name="about_activity_header" translatable="false">Media Shuffle</string>
    <string name="about_activity_body">
        The Media Shuffle app has been created by Atte Heino.\n\n
        The application contains LGPL software such as Cling DLNA Java library developed by 4th Line .org.\n
        You can find the Library and licence from http://4thline.org/projects/cling/\n\n
        Happy Shuffling!
    </string>
    <string name="eula" translatable="false">
        Copyright 2015 Atte Heino\n\n

Licensed under the Apache License, Version 2.0 (the "License”);\n
you may not use this file except in compliance with the License.\n
You may obtain a copy of the License at\n\n

    http://www.apache.org/licenses/LICENSE-2.0\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
See the License for the specific language governing permissions and
limitations under the License.
    </string>

    <!-- Activity titles -->
    <string name="title_activity_target_folder_select">Select Target Directory</string>
    <string name="title_activity_source_folder_select">Select source folder</string>

    <!-- Menu items-->
    <string name="menu_about">About</string>
    <string name="service_download_in_progress">Download in progress</string>


</resources>
