<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fi.atteheino.mediashuffler.app.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/size_of_collection_activity_main"
        android:layout_alignParentTop="true"/>

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sizeOfCollection"
        android:layout_below="@id/textView"
         />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_activity_main"
        android:id="@+id/selectSourceButton"
        android:enabled="true"
        android:layout_below="@id/sizeOfCollection"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[Selected source]"
        android:id="@+id/sourceLabel"
        android:layout_below="@id/selectSourceButton"
        />
<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_path_activity_main"
        android:id="@+id/selectSourceFolderButton"
        android:enabled="true"
        android:layout_below="@id/sourceLabel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[Selected path]"
        android:id="@+id/sourcePathLabel"
        android:layout_below="@id/selectSourceFolderButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_path_activity_main"
        android:id="@+id/selectTargetFolderButton"
        android:enabled="true"
        android:layout_below="@id/sourcePathLabel"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[Selected path]"
        android:id="@+id/targetPathLabel"
        android:layout_below="@id/selectTargetFolderButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_transfer_activity_main"
        android:id="@+id/startTransferButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp" />
</RelativeLayout>
