<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="fi.atteheino.mediashuffler.app.AboutActivity">


        <TextView
            android:id="@+id/aboutHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/about_activity_header"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/aboutBodyTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutHeaderTextView"
            android:layout_marginTop="5dp"
            android:text="@string/about_activity_body"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/eulaTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/aboutBodyTextView"
            android:layout_marginTop="20dp"
            android:text="@string/eula"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="#C5E1A5"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:padding="5dp"
            android:paddingLeft="5dp" />

    </RelativeLayout>
</ScrollView>
